Takk vekk caching - gir ingen gevinst ettersom den gjelder bare en bruker
git-svn-id: https://subversion.kantega.no/svn/aksess/projects/aksess-modules/trunk@10385 497bca9e-fae7-0310-9681-f2327195b1a6